<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/spacing_xl"
    android:background="@drawable/bg_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_role"
        android:textSize="@dimen/text_xxl"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selecciona tu rol para continuar"
        android:textSize="@dimen/text_md"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/spacing_sm"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_student"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:text="@string/role_student"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:backgroundTint="@color/white"
        android:textColor="@color/primary"
        style="@style/ButtonPrimary"/>

    <Button
        android:id="@+id/btn_teacher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:text="@string/role_teacher"
        android:layout_marginTop="@dimen/spacing_md"
        style="@style/ButtonOutlined"/>

</LinearLayout>
